@@ -1,0 +1,7 @@
+<?xml version="1.0" encoding="utf-8"?>
+<ModSyncNinjaData>
+	<ID>1a0ff80d-b0a7-4dfe-8024-c15271b563a6</ID>
+	<ModName>[sd] medicaddons</ModName>
+	<Version>b18-1.0.0</Version>
+	<SaveBreaking>false</SaveBreaking>
+</ModSyncNinjaData>
